# genuser

./: README.md  config.h  configure  configure.ac  libtool
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-checker.yml
Optimized/: Makefile  libtool
Optimized/src/: Makefile
autom4te.cache/: output.0  output.1  requests
genuser/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool
genuser/Optimized/: config.status
genuser/Optimized/po/: Makefile  Makefile.in  POTFILES
genuser/Optimized/src/: genuser
genuser/Optimized/src/.deps/: createuser.Po  main.Po
genuser/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
genuser/po/: Makefile  Makefile.in
genuser/src/: Makefile  Makefile.am  Makefile.in
genuser/src/.deps/: creategroup.Po  createuser.Po  itos.Po  main.Po
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  creategroup.c  createuser.c  genuser  itos.c  main.c  userinfo.h
src/.deps/: createuser.Po  test.Po
